# ai-orchestrator-official

./: .env.example  .gitignore  DEPLOY.md  E2E_TESTING_GUIDE.md  README.md  SCRAPER_IMPLEMENTATION_SUMMARY.md  TODOS.md  VIBECON_PITCH.md  avatar_video.py  colab_runner.py  config.py  content_generator.py  docker-compose.yml  install.sh  linkedin_auth.py  linkedin_publisher.py  pipeline.py  requirements.txt  scheduler.py  test_avatar_video.py  test_config_and_pipeline.py  test_content_generator.py  test_linkedin_publisher.py
backend/: .env.example  .env.scraper  .railway-deploy-trigger  Dockerfile  main.py  parse_test.py  railpack.json  railpack.toml  railway.json  requirements.txt  start.sh  test_openrouter.py  test_skillsmp.py
backend/app/: auth.py  config.py  database.py  llm_router.py  main.py  models.py  orchestrator.py  seed.py  seed_marketplace.py
backend/app/agents/: registry.py
backend/app/api/: activate.py  agents.py  analytics.py  architect.py  catalog_utils.py  gateway.py  keys.py  marketplace.py  mcp_server.py  scraper.py  stacks.py  tools.py
backend/app/scraper/: __init__.py  scraper.py
backend/data/: gateway.db
backend/scripts/: demo_cli.py  repo_scraper_scheduler.py  seed_demo_calls.py  sync_marketplace.py
backend/tests/: test_scraper.py
cli/create-namango-app/: package-lock.json  package.json
cli/namango/: pyproject.toml
cli/namango/namango/: cli.py
docs/: SCRAPER_API.md  SCRAPER_README.md  setup.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/: install
(+26 files in other folders)
