[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "namango"
version = "0.1.0"
description = "Namango AI Gateway — demo CLI"
requires-python = ">=3.8"
dependencies = ["httpx"]

[project.scripts]
namango = "namango.cli:main"

[tool.setuptools.packages.find]
where = ["."]
